--- a/app/index.html
+++ b/app/index.html
@@ -204,7 +204,7 @@
     </div>
     
   </footer>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+ <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
   <script src="/temp/scripts/app.js"></script>
  <!-- <script src="/assets/scripts/modules/mobilemenu.js"></script> -->
 </body>
