added brwoser support...

--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
   <header class="site-header">
    
     <div class="wrapper">
-       <div class="site-header__logo">
+       <div class="site-header__logo transformed">
           <div class="site-header__logo__graphic icon icon--clear-view-escapes">Clear View Escapes</div>
        </div>
 
@@ -210,7 +210,7 @@
 
   <div class="modal">
     <h2 class="modal__title">
-      <img src="assets/images/icons/mail.svg" class="section-title__icon">Get in <strong>Touch</strong>
+      <img src="assets/images/icons/mail.svg" class="section-title__icon open-modal">Get in <strong>Touch</strong>
     </h2>
     
         <p class="modal__description">
@@ -239,5 +239,8 @@
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="/temp/scripts/app.js"></script>
  <script src="/assets/scripts/modules/mobilemenu.js"></script>
+ <script src="/assets/scripts/modules/Modal.js"></script>
+ <script src="/assets/scripts/modules/Sticky-Header.js"></script>
+
 </body>
 </html>
